Use externally managed Nexo fishing assets